adjust update transaction request
